[gd_scene load_steps=4 format=2]

[ext_resource path="res://Arts/v1.1 dungeon crawler 16X16 pixel pack/heroes/knight/weapon_sword_1.png" type="Texture" id=1]
[ext_resource path="res://weapon/weapon.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 1 )

[node name="weapon" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.764454
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, 0 )
scale = Vector2( 0.25, 0.1 )

[connection signal="area_entered" from="." to="." method="_on_weapon_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_weapon_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
